cmake_minimum_required(VERSION 3.27)
project(2024_CPP_Learning)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(Lesson01)
add_subdirectory(Lesson02)
add_subdirectory(Lesson03)
add_subdirectory(Lesson04)
add_subdirectory(Lesson05)
add_subdirectory(Lesson06)
add_subdirectory(Lesson07)
add_subdirectory(Lesson08)
add_subdirectory(Lesson09)
add_subdirectory(_Valley)
add_subdirectory(_Exercise)
